SUBDIRS = pixmaps po src

ACLOCAL_AMFLAGS = -I m4

INTLTOOL =                      \
        intltool-extract.in     \
        intltool-merge.in       \
        intltool-update.in

EXTRA_DIST = \
	$(INTLTOOL)		\
	autogen.sh		\
	intltool-extract.in	\
	intltool-merge.in	\
	intltool-update.in	\
	server.mk		\
	FAQ

DISTCLEANFILES = \
  intltool-extract \
  intltool-merge \
  intltool-update
